# CodeRainWallpaper

./: CMakeLists.txt  LICENSE  README.md  res.rc
src/: Wallpaper.cpp  Wallpaper.h  main.cpp
